2012-02-15  Stefan Sauer  <ensonic@users.sf.net>

	* CyanPhase/AtomStereoMeld/atom.cpp:
	  Add missing DLL_EXPORT.

2012-02-15  Stefan Sauer  <ensonic@users.sf.net>

	* CyanPhase/DTMF/Makefile.am:
	* HACKING:
	* Matilde/Tracker/Makefile.am:
	* TODO:
	* Matilde/Tracker/Matilde_Tracker2.html (added):
	* CyanPhase/DTMF/CyanPhase_DTMF_1.txt (added):
	* CyanPhase/DTMF/CyanPhase_DTMF-1.txt (deleted):
	  Install docs as well. Update HACKING+TODO.

2012-02-13  Stefan Sauer  <ensonic@users.sf.net>

	* Fuzzpilz/UnwieldyTracker/unwieldy_tracker.cpp:
	* HACKING:
	* Fuzzpilz (added):
	* Fuzzpilz/UnwieldyTracker (added):
	* Fuzzpilz/UnwieldyTracker/unwieldy_tracker.cpp (added):
	  And another element.

2012-02-13  Stefan Sauer  <ensonic@users.sf.net>

	* Elenzil/FrequencyBomb/freqbomb.cpp:
	* Elenzil/Modulator/amplitude_modulator.cpp:
	* Elenzil/Modulator/amplitude_modulator.html:
	* Elenzil/Modulator/elenzil_ampmod.bmx:
	* HACKING:
	* Elenzil/Modulator/elenzil_ampmod.bmx (svn:mime-type):
	* Elenzil (added):
	* Elenzil/FrequencyBomb (added):
	* Elenzil/FrequencyBomb/freqbomb.cpp (added):
	* Elenzil/Modulator (added):
	* Elenzil/Modulator/elenzil_ampmod.bmx (added):
	* Elenzil/Modulator/amplitude_modulator.cpp (added):
	* Elenzil/Modulator/amplitude_modulator.html (added):
	  Add two more machine sources.

2012-02-13  Stefan Sauer  <ensonic@users.sf.net>

	* HACKING:
	* MadBrain/4fm2f/4fm2f.cpp:
	* MadBrain/4fm2f/4fm4f.prs:
	* MadBrain/4fm2f/4fm_wf.c:
	* MadBrain/4fm2f/waves2.h:
	* MadBrain/Dynamite6/Dynamite6.cpp:
	* MadBrain/Dynamite6/Dynamite6.prs:
	* MadBrain/Dynamite6/Dynamite6_Demo.bmx:
	* MadBrain/Dynamite6/Dynamite6.prs (svn:mime-type):
	* MadBrain/4fm2f/4fm4f.prs (svn:mime-type):
	* MadBrain/Dynamite6/Dynamite6_Demo.bmx (svn:mime-type):
	* MadBrain (added):
	* MadBrain/Dynamite6 (added):
	* MadBrain/Dynamite6/Dynamite6.cpp (added):
	* MadBrain/Dynamite6/Dynamite6.prs (added):
	* MadBrain/Dynamite6/Dynamite6_Demo.bmx (added):
	* MadBrain/4fm2f (added):