@@ -30,7 +30,6 @@ Q
   Zfilter
   Rebound
 WhiteNoise
-  StereoDist
   WhiteChorus
 Zwar
   11stereo
