@@ -1,6 +1,6 @@
 ## $Id$
 
-SUBDIRS = common Chimp CyanPhase Elak Ensonic FSM Geonik Jeskola Ld Makk Matilde
+SUBDIRS = common Chimp CyanPhase Elak Ensonic FSM Geonik Jeskola Ld Makk Matilde WhiteNoise
 
 ACLOCAL_AMFLAGS = -I m4
 
