@@ -1,0 +1,4 @@
+## $Id: Makefile.am 32 2008-06-22 14:58:30Z ensonic $
+
+SUBDIRS = StereoDist
+
